--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,38 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 4px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 8px;
+  font-size:16px;
+  padding:10px;
 }
 
 .content {
   background: #e3f4ff;
+  margin:8px;
+  padding: 16px;
+  padding-left: 8px;
+  padding-right:8px;
+  font-weight:300;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 8px;
+  padding: 8px;
+  text-align:center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display:block;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right:20px;  
+  margin:auto
 }
